// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMoneyForm renders component when valid = false 1`] = `
<WithStyles(Grid)
  className="root-mock"
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Recipient
    </WithStyles(Typography)>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      label=""
      name="recipient"
      placeholder="Enter Zcash Address"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Available to send
    </WithStyles(Typography)>
    <WithStyles(Grid)
      alignItems="center"
      className="balance-mock field-mock"
      container={true}
      justify="space-between"
    >
      <WithStyles(Grid)
        className="balanceField-mock"
        item={true}
        xs={4}
      >
        <WithStyles(Grid)
          alignItems="center"
          container={true}
        >
          <Memo(ZcashIcon)
            size={20}
          />
          <WithStyles(Typography)
            className="value-mock"
            variant="title"
          >
            Zcash Wallet
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={4}
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          direction="column"
          justify="center"
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Typography)
              className="balanceZec-mock"
              variant="title"
            >
              0.7
               ZEC
            </WithStyles(Typography)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Typography)
              className="balanceUsd-mock"
              variant="caption"
            >
              $
              35.0000
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Amount
    </WithStyles(Typography)>
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <WithStyles(Grid)
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
                position="end"
              >
                ZEC
              </WithStyles(WithFormControlContext(InputAdornment))>,
            }
          }
          label=""
          name="amountZec"
          otherField="amountUsd"
          placeholder="0.00"
          transformer={"50"}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={2}
      >
        <WithStyles(Typography)
          className="textBetweenInputs-mock"
          variant="caption"
        >
          OR
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
                position="end"
              >
                USD
              </WithStyles(WithFormControlContext(InputAdornment))>,
            }
          }
          label=""
          name="amountUsd"
          otherField="amountZec"
          placeholder="0.00"
          transformer={"0.4"}
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Memo
    </WithStyles(Typography)>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      label=""
      name="memo"
      placeholder="Enter an optional message"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <CheckboxWithLabel
      color="primary"
      label="Include my shipping info"
      name="shippingInfo"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Button)
      className="button-mock"
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Continue
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SendMoneyForm renders component when valid = true 1`] = `
<WithStyles(Grid)
  className="root-mock"
  container={true}
  spacing={24}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Recipient
    </WithStyles(Typography)>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      label=""
      name="recipient"
      placeholder="Enter Zcash Address"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Available to send
    </WithStyles(Typography)>
    <WithStyles(Grid)
      alignItems="center"
      className="balance-mock field-mock"
      container={true}
      justify="space-between"
    >
      <WithStyles(Grid)
        className="balanceField-mock"
        item={true}
        xs={4}
      >
        <WithStyles(Grid)
          alignItems="center"
          container={true}
        >
          <Memo(ZcashIcon)
            size={20}
          />
          <WithStyles(Typography)
            className="value-mock"
            variant="title"
          >
            Zcash Wallet
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={4}
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          direction="column"
          justify="center"
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Typography)
              className="balanceZec-mock"
              variant="title"
            >
              0.7
               ZEC
            </WithStyles(Typography)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Typography)
              className="balanceUsd-mock"
              variant="caption"
            >
              $
              35.0000
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Amount
    </WithStyles(Typography)>
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <WithStyles(Grid)
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
                position="end"
              >
                ZEC
              </WithStyles(WithFormControlContext(InputAdornment))>,
            }
          }
          label=""
          name="amountZec"
          otherField="amountUsd"
          placeholder="0.00"
          transformer={"50"}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={2}
      >
        <WithStyles(Typography)
          className="textBetweenInputs-mock"
          variant="caption"
        >
          OR
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={5}
      >
        <LinkedTextField
          InputProps={
            Object {
              "className": "field-mock",
              "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
                position="end"
              >
                USD
              </WithStyles(WithFormControlContext(InputAdornment))>,
            }
          }
          label=""
          name="amountUsd"
          otherField="amountZec"
          placeholder="0.00"
          transformer={"0.4"}
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Typography)
      variant="body1"
    >
      Memo
    </WithStyles(Typography)>
    <TextField
      InputProps={
        Object {
          "className": "field-mock",
        }
      }
      label=""
      name="memo"
      placeholder="Enter an optional message"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <CheckboxWithLabel
      color="primary"
      label="Include my shipping info"
      name="shippingInfo"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Button)
      className="button-mock"
      color="primary"
      disabled={false}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Continue
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
